--- a/pom.xml
+++ b/pom.xml
@@ -32,11 +32,11 @@
 
 
         <!-- https://mvnrepository.com/artifact/nio/nio -->
-        <dependency>
-            <groupId>nio</groupId>
-            <artifactId>nio</artifactId>
-            <version>1.0.4</version>
-        </dependency>
+        <!--<dependency>-->
+            <!--<groupId>nio</groupId>-->
+            <!--<artifactId>nio</artifactId>-->
+            <!--<version>1.0.4</version>-->
+        <!--</dependency>-->
 
         <dependency>
             <groupId>io.netty</groupId>
@@ -74,11 +74,6 @@
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-lang3</artifactId>
             <version>3.6</version>
-        </dependency>
-        <dependency>
-            <groupId>com.google.guava</groupId>
-            <artifactId>guava</artifactId>
-            <version>27.1-jre</version>
         </dependency>
         <dependency>
             <groupId>org.apache.commons</groupId>
